--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,32 @@
 
 body{
     margin: 0;
+    text-align: center;
+}
+
+.firstone{
+    position: relative;
+    padding-top: 100px;
+    background-color: aqua;
+}
+
+.secondone{
+    height: 100px;
+    width: 100px;
 }
 
 h1{
     margin-top:0;
+}
+
+.bottomcloud{
+    position: absolute;
+    left: 200px;
+    bottom: 300px;
+}
+
+.topcloud{
+    position: absolute;
+    right: 200px;
+    top: 50px;
 }
